# demokritoslib

./: .gitignore  CMakeLists.txt
data/: srim.txt
include/: Element.hh  FitStateEnum.hh  Isotope.hh  MassFunctions.hh  Reaction.hh  ReactionList.hh  Stopping.hh  Target.hh  TargetElement.hh  TargetLayer.hh
src/: Element.cc  Isotope.cc  MassFunctions.cc  Reaction.cc  ReactionList.cc  Stopping.cc  Target.cc  TargetElement.cc  TargetLayer.cc
